# mirinae2

./: CMakeLists.txt  vcpkg.json
app/mirinae_sdl/: CMakeLists.txt  main.cpp
lib/auxiliary/: CMakeLists.txt
lib/auxiliary/src/: log.cpp
lib/vulkan/: CMakeLists.txt
lib/vulkan/include/mirinae/vulkan/: cinfo.hpp  renderer.hpp  renderer_vulkan.hpp
lib/vulkan/src/: renderer_vulkan.cpp
lib/vulkan/src/device/: device.cpp  device.hpp
